--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/speed-insights": "^1.0.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "eslint": "^8.57.1",
     "framer-motion": "^11.9.0",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
